Development
	Fix problem with media info being shown on BBC News site when it should not
	Fix dragging and dropping of a playlist that is not parsable (ASX for example)
	Fix for BBC Radio
	Show the playlist filename in the first column header of the playlist view
	Don't show the song_title widget, but show the media label widget
	Show the media media data when video is no present
	Show 'playback area' as filler when playlist is shown
	Allow updating of song title and artist from http://www.thedividingline.com
	Fix crasher in shuffle playlist and also don't allow it when < 2 items on list
	Allow opening of playlist via File->Open Menu
	Disable File->Details until first file is loaded
	Add src/playlist.c to POTFILES.in
	Fix crasher in parse_basic and then if the itemname is passed in blank, don't add it to the list
	Enable tooltip showing complete filename when hovering over item in playlist
	When running in realplayer mode, make sure GUI is properly updated
	Use the filesize and the stream_pos to help out with the buffering/autopause
	90% coverage of RealPlayer 'controls'
	More work on realplayer emulation
	Playlist tooltips
	Setup some of the infrastructure for RealPlayer support
	Move playlist to horizontal pane and redo buttons (shifting between horz and vert could be easy now)
	Add hotkey "#" to switch audio
	Add command line options rpname and rptarget, this is for better real player support
	Fix some resizing issues with new layout
	Embed playlist in a vertical pane
	Move playlist from window to panel (still needs cleanup)
	Handle the resize code differently so that kvbc.com works
0.5.1
	Hide total time display on streaming media when total time is greater than 24 hours
	Implement Copy URL function on right click menu when running in plugin mode
	On error "Error while decoding frame" rewind 10 seconds to find key frame again
	Allow CTRL-F to take the display out of fullscreen mode
	When Paused and the progress bar is clicked, set state back to playing